infra-setup/base/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: pace3
  namespace: pace3
  labels:
    app: pace3
spec:
  selector:
    app: pace3
  ports:
  - name: pace3
    port: 8080
    targetPort: 8080
    protocol: TCP
  - name: pace3-frontend
    port: 3000
    targetPort: 3000
    protocol: TCP
  type: ClusterIP
