infra-setup/base/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: pace3-ingress
  labels:
    app: pace3
  annotations:
    kubernetes.io/ingress.class: traefik
    ingress.kubernetes.io/content-security-policy: "default-src 'self'"
    cert-manager.io/cluster-issuer: letsencrypt-prod
spec:
  rules:
    - host: base
      http:
        paths:
          - path: /api
            pathType: Prefix
            backend:
              service:
                name: pace3
                port:
                  number: 8080
          - path: /
            pathType: Prefix
            backend:
              service:
                name: pace3
                port:
                  number: 3000
  tls:
    - secretName: pace3-tls
      hosts:
        - pace3.lauf-gegen-rechts.de
